--- a/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.html
@@ -65,7 +65,7 @@
       <input matInput
              type="text"
              formControlName="contactMethod"
-             (input)="this.DataService.formatPhoneNumber(this.petForm)" />
+             (input)="this.DataService.formatPhoneNumberWithKey(this.petForm)" />
       <mat-hint>(647) 234-5678</mat-hint>
     </mat-form-field>
 
