--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
@@ -13,12 +13,6 @@
   align-items: baseline;
 }
 
-.client-page-title {
-  display: flex;
-  justify-content: space-between;
-  width: 10em;
-}
-
 .btn-layout {
   grid-column: span 2;
   display: flex;
@@ -33,6 +27,10 @@
   }
 }
 
+.address-area {
+  grid-column: 1 / 3;
+}
+
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -42,7 +40,8 @@ mat-card {
   padding: 1em;
 
   mat-card-title {
-    margin-bottom: 2em;
+    margin-right: 1em;
+    width: 100%;
   }
 
   form {
@@ -58,6 +57,52 @@ mat-card {
   padding: 20em;
   background-color: gray;
   color: white;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 0.5fr);
+  margin-bottom: 1px;
+}
+
+.grid-item {
+  padding: 1em;
+  text-align: start;
+}
+
+/* Alternating row colors */
+.client-info-container > div:nth-child(odd) {
+  background-color: rgba(225, 224, 224, 0.265);
+}
+
+.client-info-container > div:nth-child(even) {
+  background-color: #ffffff;
+}
+
+.pets-layout {
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: repeat(auto-fill, 20em);
+  gap: 1em;
+  height: 15em;
+  overflow-y: scroll;
+  padding: 0.5em 0;
+}
+
+.pets-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pets-title {
+  margin-top: 1em;
+  font-weight: bold;
+}
+
+.pet-card {
+  max-width: 20em;
+  max-height: 10em;
 }
 
 @media (max-width: 1000px) {
