--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
@@ -34,6 +34,7 @@ form {
 
 #client-panel {
   right: 10%;
+  z-index: 100;
 }
 
 #appointment-panel {
@@ -44,6 +45,7 @@ form {
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
+  z-index: 100;
 }
 
 .logo {
